--- a/app/src/main/res/layout/activity_menu_aukdeliver.xml
+++ b/app/src/main/res/layout/activity_menu_aukdeliver.xml
@@ -196,30 +196,47 @@
 
             </androidx.cardview.widget.CardView>
         </GridLayout>
-        <TextView
-            android:layout_width="match_parent"
-            android:fontFamily="@font/futura"
-            android:textAlignment="center"
-            android:layout_marginTop="20dp"
-            android:textSize="20dp"
-            android:text="Cronometro de entrega de pedidos"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:text="00:00:00"
-            android:textAlignment="center"
-            android:textSize="70dp"
-            android:id="@+id/realTimeCronometro"
-            android:layout_height="wrap_content"/>
 
-        <Button
-            android:layout_width="300dp"
-            android:text="Reporte"
-            android:layout_gravity="center"
-            android:textAlignment="center"
-            android:textSize="30dp"
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            app:cardElevation="6dp"
+            android:foreground="@drawable/itemback"
+            android:clickable="true"
+            app:cardCornerRadius="12dp"
             android:id="@+id/txtReporte"
-            android:layout_height="wrap_content"/>
+            android:layout_margin="12dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:text="Reporte"
+                    android:src="@drawable/gan"
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    android:textSize="30dp"
+                    android:layout_height="100dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_marginBottom="12dp"
+                    android:text="Mis Ganancias"
+                    android:fontFamily="@font/futura"
+                    android:textSize="16sp"
+                    android:textColor="#000000"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+
+        </androidx.cardview.widget.CardView>
         </LinearLayout>
 
 </LinearLayout>
