--- a/app/src/main/res/drawable/rv_item.xml
+++ b/app/src/main/res/drawable/rv_item.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#E1E1E1"/>
+    <solid android:color="#F5F5F5"/>
 
     <stroke
         android:width="1dp"
