--- a/app/src/main/res/layout/item_cart_layout.xml
+++ b/app/src/main/res/layout/item_cart_layout.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
-    android:background="#fff"
+    android:background="#f5f5f5"
     android:orientation="horizontal"
     android:paddingStart="16dp"
     android:paddingTop="12dp"
@@ -22,7 +22,7 @@
             android:id="@+id/iv_cart_item_image"
             android:layout_width="80dp"
             android:layout_height="70dp"
-            android:background="#c4c4c4"
+            android:background="#fff"
             android:contentDescription="todo"
             android:scaleType="fitXY" />
     </LinearLayout>
@@ -84,9 +84,20 @@
                     android:textSize="14sp"
                     android:textStyle="bold"
                     tools:text="1" />
-
             </LinearLayout>
         </RelativeLayout>
+
+        <TextView
+            android:id="@+id/tv_cart_item_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:textColor="#FC0000"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            tools:text="Pendiente"/>
+
     </LinearLayout>
 
 </LinearLayout>
